# debtcollector

./: .coveragerc  .gitignore  .gitreview  .pre-commit-config.yaml  .stestr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  MANIFEST.in  README.rst  lower-constraints.txt  openstack-common.conf  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
debtcollector/: __init__.py  _utils.py  moves.py  removals.py  renames.py  updating.py
debtcollector/fixtures/: disable.py
debtcollector/tests/: base.py  test_debtcollector.py  test_deprecation.py
doc/: requirements.txt
doc/source/: api.rst  conf.py  examples.rst  index.rst  installation.rst  usage.rst
doc/source/install/: index.rst
doc/source/reference/: index.rst
doc/source/user/: index.rst
releasenotes/notes/: deprecate-version-attribute-e1ba99c3224e9de4.yaml  drop-python-2-7-73d3113c69d724d6.yaml
releasenotes/source/: conf.py  index.rst
